# rustline

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
crates/rustline/: Cargo.toml
crates/rustline-abi/: Cargo.toml
crates/rustline-abi/src/: lib.rs
crates/rustline-core/: Cargo.toml
crates/rustline-core/src/: ansi.rs  assemble.rs  config.rs  context.rs  lib.rs  render.rs  segment.rs  themes.rs  widget.rs
crates/rustline-core/src/widgets/: alert.rs  bar.rs  battery.rs  cpu.rs  cwd.rs  datetime.rs  disk.rs  git.rs  hostname.rs  lan_ip.rs  loadavg.rs  media.rs  memory.rs  mod.rs  net.rs  pane_id.rs  spark.rs  tailscale_ip.rs  throughput.rs  toggle.rs  uptime.rs  windows.rs
crates/rustline-plugin-sdk/: Cargo.toml
crates/rustline-plugin-sdk/src/: lib.rs
crates/rustline-wasm/: Cargo.toml
crates/rustline-wasm/src/: abi.rs  allow.rs  cache.rs  capability.rs  denials.rs  fetch.rs  host.rs  lib.rs  manifest.rs  paths.rs  perform.rs  state.rs
crates/rustline-wasm/tests/: e2e.rs
crates/rustline/assets/: plugin-cargo.toml.tmpl  plugin-lib.rs.tmpl  starter-config.toml
crates/rustline/src/: battery.rs  build_context.rs  cli.rs  click.rs  config_cmd.rs  cpu.rs  disk.rs  doctor.rs  git.rs  history.rs  init.rs  logging.rs  main.rs  media.rs  memory.rs  plugin_cmd.rs  plugin_install.rs  sample_context.rs  sample_store.rs  theme_cmd.rs  throughput.rs  tmux_conf.rs  toggles.rs  uptime.rs
crates/rustline/src/bench/: fixture.rs  harness.rs  mod.rs  plugins.rs  render_passes.rs  report.rs  sources.rs
crates/rustline/testdata/: theme_preview_alerts_false.golden  theme_preview_alerts_true.golden
crates/rustline/tests/: smoke.rs  wasm_wiring.rs
docs/superpowers/notes/: 2026-07-23-w43-compiled-module-cache-feasibility.md
docs/superpowers/plans/: 2026-07-20-host-cached-http-fetch.md  2026-07-20-rustline-ip-widgets.md  2026-07-20-rustline-tmux-statusline.md  2026-07-20-rustline-wasm-plugins.md  2026-07-21-rustline-battery-widget.md  2026-07-21-rustline-bench-tool.md  2026-07-21-rustline-click-toggle-widgets.md  2026-07-21-rustline-cpu-memory-widgets.md  2026-07-21-rustline-file-logging.md  2026-07-21-rustline-loadavg-format.md  2026-07-21-rustline-themes-theme-picker.md  2026-07-21-rustline-window-pill.md  2026-07-22-rustline-init-onboarding-wizard.md  2026-07-22-rustline-theme-pick.md  2026-07-22-rustline-whatsnext-bundle.md  2026-07-23-rustline-whatsnext-bundle-2.md  2026-07-23-rustline-whatsnext-bundle-3.md
docs/superpowers/specs/: 2026-07-20-host-cached-http-fetch-design.md  2026-07-20-rustline-ip-widgets-design.md  2026-07-20-rustline-tmux-statusline-design.md  2026-07-20-rustline-wasm-plugins-design.md  2026-07-21-rustline-battery-widget-design.md  2026-07-21-rustline-bench-tool-design.md  2026-07-21-rustline-click-toggle-widgets-design.md  2026-07-21-rustline-cpu-memory-widgets-design.md  2026-07-21-rustline-file-logging-design.md  2026-07-21-rustline-loadavg-format-design.md  2026-07-21-rustline-themes-theme-picker-design.md  2026-07-21-rustline-window-pill-design.md  2026-07-22-rustline-init-onboarding-wizard-design.md  2026-07-22-rustline-theme-pick-design.md  2026-07-22-rustline-whatsnext-bundle-design.md  2026-07-23-rustline-whatsnext-bundle-2-design.md  2026-07-23-rustline-whatsnext-bundle-3-design.md
plugins/counter/: Cargo.toml
plugins/counter/src/: lib.rs
plugins/filewatch/: Cargo.toml
plugins/filewatch/src/: lib.rs
plugins/httpget/: Cargo.toml
plugins/httpget/src/: lib.rs
plugins/weather/: Cargo.toml
plugins/weather/src/: lib.rs
