[workspace]
resolver = "2"
members = [
    "crates/rustline-abi",
    "crates/rustline-core",
    "crates/rustline",
    "crates/rustline-wasm",
    "crates/rustline-plugin-sdk",
]
exclude = ["plugins/weather", "plugins/counter", "plugins/filewatch", "plugins/httpget"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
