[package]
name = "rustline-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
toml = "0.9"
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
serde_json = "1"
