[package]
name = "rustline-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
rustline-abi = { path = "../rustline-abi" }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
chrono-tz = "0.10"
toml = "0.9"
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
