[package]
name = "rustline-plugin-sdk"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
# The shared wire types (Segment/Style/Color/GuestRender/WireContext/…). A
# guest gets them re-exported from this one crate rather than depending on
# rustline-abi directly.
rustline-abi = { path = "../rustline-abi" }
serde = { version = "1", features = ["derive"] }
# Guest-side host-result decoding (`decode`) and the `render` input parse
# (`render_with`) both go through serde_json; `GuestRender.config` is an opaque
# `serde_json::Value`.
serde_json = "1"
thiserror = "2"

# The Extism guest bindings are only linkable on the wasm target; on the host
# target the capability wrappers degrade to `HostError::Unavailable` stubs so
# the pure logic and this crate's unit tests still compile and run.
[target.'cfg(target_arch = "wasm32")'.dependencies]
extism-pdk = "1"
