[package]
name = "rustline-wasm"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
rustline-core = { path = "../rustline-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
globset = "0.4"
regex = "1"
walkdir = "2"
tracing = "0.1"
thiserror = "2"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }

[dev-dependencies]
tempfile = "3"
