[package]
name = "rustline"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "rustline"
path = "src/main.rs"

[dependencies]
rustline-core = { path = "../rustline-core" }
rustline-wasm = { path = "../rustline-wasm" }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
libc = "0.2"
gethostname = "1"
if-addrs = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
toml = "0.9"
toml_edit = "0.25"

[features]
# Opt-in positive end-to-end test that renders a real plugin through the bin
# (register_plugins -> WasmWidget -> guest). Needs `just build-weather`; gated
# so a plain `cargo test` stays hermetic.
wasm-e2e = []

[dev-dependencies]
tempfile = "3"
