[package]
name = "rustline"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "rustline"
path = "src/main.rs"

[dependencies]
rustline-core = { path = "../rustline-core" }
rustline-wasm = { path = "../rustline-wasm" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
libc = "0.2"
gethostname = "1"
if-addrs = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "fmt", "ansi"] }
anyhow = "1"
toml = "0.9"
toml_edit = "0.25"
serde_json = "1"
# GitHub release download for `plugin install` (W38): rustls only (the `tls`
# feature = rustls in ureq 2.x — never native-tls/openssl), `json` for the
# release-API response. A dedicated downloader (this, not rustline-wasm's
# String-body Fetcher) because it must follow GitHub's redirect to the binary
# asset and return raw bytes.
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
sha2 = "0.10"
comfy-table = { version = "7", optional = true }

[features]
# Opt-in positive end-to-end test that renders a real plugin through the bin
# (register_plugins -> WasmWidget -> guest). Needs `just build-weather`; gated
# so a plain `cargo test` stays hermetic.
wasm-e2e = []
# Opt-in `rustline bench` subcommand + its report deps. Off by default: the
# shipping binary and its dep graph are unchanged.
bench = ["dep:comfy-table"]

[dev-dependencies]
tempfile = "3"
