# Empty [workspace] table: `weather` is an *excluded* member of the top-level
# rustline workspace and builds standalone for wasm32. Declaring its own
# workspace root stops cargo climbing ancestors for a root — which otherwise
# breaks `cargo build` when the repo is checked out inside another (e.g. an
# in-repo `.worktrees/<branch>` git worktree, whose outer Cargo.toml doesn't
# list this deeper path in `exclude`).
[workspace]

[package]
name = "weather"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib"]

# The pure wttr.in JSON parse (host-tested) uses serde/serde_json.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Guest bindings only compiled for the wasm target; host-side `cargo test`
# builds just the pure logic below. `extism-pdk` is needed for the exports
# `export_plugin!` emits; the SDK supplies the typed host wrappers, wire types,
# toggle helper, and that macro.
[target.'cfg(target_arch = "wasm32")'.dependencies]
extism-pdk = "1"
rustline-plugin-sdk = { path = "../../crates/rustline-plugin-sdk" }
